{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 190,
  "lineage": "54c99f55-2acd-2e31-224b-dd650be6f5ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "milk-cluster-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate with the cluster API Server",
            "from_port": 22,
            "id": "sgrule-2542787146",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dd6b6950fc367a68",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eks_cluster.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:security-group/sg-043c3e520aee2bd50",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043c3e520aee2bd50",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea690185929def5e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "kilhan-eks-cluster20210131092034866800000004",
            "name_prefix": "kilhan-eks-cluster",
            "owner_id": "936777008077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kilhan-eks-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:security-group/sg-0ea690185929def5e",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea690185929def5e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043c3e520aee2bd50"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043c3e520aee2bd50"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "kilhan-eks-cluster20210131093307103700000006",
            "name_prefix": "kilhan-eks-cluster",
            "owner_id": "936777008077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kilhan-eks-cluster-eks_worker_sg",
              "kubernetes.io/cluster/kilhan-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2403286969",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-043c3e520aee2bd50",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.milk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-4145487914",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-043c3e520aee2bd50",
            "self": false,
            "source_security_group_id": "sg-0ea690185929def5e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1769317218",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ea690185929def5e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-4234771428",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea690185929def5e",
            "self": false,
            "source_security_group_id": "sg-043c3e520aee2bd50",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-544146052",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea690185929def5e",
            "self": false,
            "source_security_group_id": "sg-043c3e520aee2bd50",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3492175072",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ea690185929def5e",
            "self": false,
            "source_security_group_id": "sg-0ea690185929def5e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "milk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0387994d5e45ccb94",
            "id": "rtb-0387994d5e45ccb94",
            "owner_id": "936777008077",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0638678c78b31360a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "milk-default-rtb"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "milk_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:security-group/sg-0b55876b3846cc44e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b55876b3846cc44e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "936777008077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "milk-default-securitygroup"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "milk-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d896d892157bafc9",
            "domain": "vpc",
            "id": "eipalloc-0e0d9e89e9479c7d9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-015f2d12f2a88ee80",
            "private_dns": "ip-10-10-1-219.ec2.internal",
            "private_ip": "10.10.1.219",
            "public_dns": "ec2-34-234-243-10.compute-1.amazonaws.com",
            "public_ip": "34.234.243.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.milk_igw",
            "module.vpc.aws_vpc.milk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "milk_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:internet-gateway/igw-0638678c78b31360a",
            "id": "igw-0638678c78b31360a",
            "owner_id": "936777008077",
            "tags": {
              "Name": "milk-igw"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "milk_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0d9e89e9479c7d9",
            "id": "nat-00c5cf0bbae56e22e",
            "network_interface_id": "eni-015f2d12f2a88ee80",
            "private_ip": "10.10.1.219",
            "public_ip": "34.234.243.10",
            "subnet_id": "subnet-0e401711ce025b6fd"
          },
          "dependencies": [
            "module.vpc.aws_eip.milk-eip",
            "module.vpc.aws_internet_gateway.milk_igw",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "milk_acl_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:network-acl/acl-0c805d8c889a326c4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c805d8c889a326c4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "936777008077",
            "subnet_ids": [
              "subnet-04fe4a0692bc89932",
              "subnet-0a3836adfcbfecba9"
            ],
            "tags": {
              "Name": "milk_acl_private"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "milk_acl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:network-acl/acl-030be90ecfb4625f9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              }
            ],
            "id": "acl-030be90ecfb4625f9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "936777008077",
            "subnet_ids": [
              "subnet-043268780d71f5d30",
              "subnet-0e401711ce025b6fd"
            ],
            "tags": {
              "Name": "milk_acl_public"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_private_egress443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2198724562",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c805d8c889a326c4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_private",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_private_egress80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-413701053",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c805d8c889a326c4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_private",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_private_egress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.10.0.0/16",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3068658877",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c805d8c889a326c4",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_private",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_private_ingress_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1149264044",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c805d8c889a326c4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_private",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_private_ingress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.10.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4005094568",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c805d8c889a326c4",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_private",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_public_egress22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.10.0.0/16",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-321820182",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-030be90ecfb4625f9",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_public",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_public_egress443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1689273574",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-030be90ecfb4625f9",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_public",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_public_egress80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4279568521",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-030be90ecfb4625f9",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_public",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_public_egress_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4229116918",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-030be90ecfb4625f9",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_public",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_public_ingress22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3091591175",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-030be90ecfb4625f9",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_public",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_public_ingress443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-93297865",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-030be90ecfb4625f9",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_public",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_public_ingress80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3625534796",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-030be90ecfb4625f9",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_public",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "milk_public_ingress_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-413151194",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-030be90ecfb4625f9",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.milk_acl_public",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "milk_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0638678c78b31360a",
            "id": "r-rtb-0387994d5e45ccb941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0387994d5e45ccb94",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_route_table.milk",
            "module.vpc.aws_internet_gateway.milk_igw",
            "module.vpc.aws_vpc.milk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08975a8390afb15431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00c5cf0bbae56e22e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08975a8390afb1543",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.milk-eip",
            "module.vpc.aws_internet_gateway.milk_igw",
            "module.vpc.aws_nat_gateway.milk_nat",
            "module.vpc.aws_route_table.milk_private_route_table",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "milk_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08975a8390afb1543",
            "owner_id": "936777008077",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00c5cf0bbae56e22e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "milk-private-rtb"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "milk_private_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0109f9606916b7c0c",
            "route_table_id": "rtb-08975a8390afb1543",
            "subnet_id": "subnet-0a3836adfcbfecba9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.milk_private_route_table",
            "module.vpc.aws_subnet.milk_private_subnet1",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "milk_private_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c79c3577a7dd14a",
            "route_table_id": "rtb-08975a8390afb1543",
            "subnet_id": "subnet-04fe4a0692bc89932"
          },
          "dependencies": [
            "module.vpc.aws_route_table.milk_private_route_table",
            "module.vpc.aws_subnet.milk_private_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "milk_public_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f855a3093e975bbb",
            "route_table_id": "rtb-0387994d5e45ccb94",
            "subnet_id": "subnet-0e401711ce025b6fd"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.milk",
            "module.vpc.aws_subnet.milk_public_subnet1",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "milk_public_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0283cc0f63c1d125f",
            "route_table_id": "rtb-0387994d5e45ccb94",
            "subnet_id": "subnet-043268780d71f5d30"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.milk",
            "module.vpc.aws_subnet.milk_public_subnet2",
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "milk_bastion_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:security-group/sg-0c30a2b2274655827",
            "description": "Security group for bastion instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c30a2b2274655827",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "milk_bastion_security_group",
            "name_prefix": "",
            "owner_id": "936777008077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "milk_bastion_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "milk_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:subnet/subnet-0a3836adfcbfecba9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-0a3836adfcbfecba9",
            "map_public_ip_on_launch": false,
            "owner_id": "936777008077",
            "tags": {
              "Name": "milk-private-az-1"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "milk_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:subnet/subnet-04fe4a0692bc89932",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-04fe4a0692bc89932",
            "map_public_ip_on_launch": false,
            "owner_id": "936777008077",
            "tags": {
              "Name": "milk-private-az-2"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "milk_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:subnet/subnet-0e401711ce025b6fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0e401711ce025b6fd",
            "map_public_ip_on_launch": true,
            "owner_id": "936777008077",
            "tags": {
              "Name": "milk-public-az-1"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "milk_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:subnet/subnet-043268780d71f5d30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-043268780d71f5d30",
            "map_public_ip_on_launch": true,
            "owner_id": "936777008077",
            "tags": {
              "Name": "milk-public-az-2"
            },
            "vpc_id": "vpc-07d98e3bcffef686e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.milk-vpc",
            "module.vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "milk-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:vpc/vpc-07d98e3bcffef686e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0274783b379739970",
            "default_route_table_id": "rtb-0387994d5e45ccb94",
            "default_security_group_id": "sg-0b55876b3846cc44e",
            "dhcp_options_id": "dopt-1d9b5667",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07d98e3bcffef686e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0387994d5e45ccb94",
            "owner_id": "936777008077",
            "tags": {
              "Name": "milk-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}